# pytorch-cuda-container-with-poetry

./: Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
